[package]
name = "glfw-sys"
version = "3.1.3-glfw.3.1.1"
authors = ["Camilla Berglund <elmindreda@elmindreda.org>"]

links = "glfw3"
build = "build.rs"

description = "An Open Source, multi-platform library for creating windows with OpenGL contexts and receiving input and events"
documentation = "http://www.glfw.org/documentation.html"
homepage = "http://www.glfw.org/"
repository = "https://github.com/bjz/glfw_sys"
readme = "README.md"
license = "Zlib/Libpng"

[lib]
name = "glfw_sys"
path = "lib.rs"

[dependencies]
libc = "*"


[build-dependencies]
bt = "*"